--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
 html,
 body {
 	@apply bg-grey-default;
+	scroll-behavior: smooth;
 }
 
 /* SLIDER */
@@ -42,4 +43,10 @@ body {
 
 .swiper-button-prev::after {
 	margin-right: 2px;
+}
+
+.active {
+	/* Add whatever CSS style will make your link look active. The example below (in my case) */
+	@apply text-primary-orange font-bold after:absolute after:w-full after:h-[2.5px] after:bg-primary-orange after:left-0 after:bottom-[-29px] after:rounded;
+	/* block py-2 pl-3 pr-4 text-white bg-orange-700 rounded md:bg-transparent md:text-orange-700 md:p-0 underline; */
 }
