small fixes backend, login and signup basic version, divided into smaller components for inputs, beginning of admin page

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -54,3 +54,7 @@ body {
 .activeNav {
 	@apply text-primary-orange font-bold;
 }
+
+.Mui-focused .MuiOutlinedInput-notchedOutline {
+	border-color: #ff9900 !important;
+}
