--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -52,6 +52,7 @@ body {
 
 .swiper-scrollbar.swiper-scrollbar-horizontal {
 	position: absolute !important;
+	z-index: 40 !important;
 	bottom: 0 !important;
 	width: 120px !important;
 	height: 12px !important;
@@ -133,6 +134,6 @@ body {
 }
 
 /* TODO HIDING HYDRATION ERROR */
-nextjs-portal {
+/* nextjs-portal {
 	display: none;
-}
+} */
