fixed subscription cancel and purchase message, deleted video thumbnails comments, added error messages

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -136,6 +136,14 @@ body {
 	font-family: "Montserrat", "sans-serif" !important;
 }
 
+.select-label {
+	color: #fafaf5 !important;
+}
+
+.select-input::before {
+	border-bottom: 1px solid #fafaf5 !important;
+}
+
 /* TODO HIDING HYDRATION ERROR */
 nextjs-portal {
 	display: none;
